# Zoethrope

./: .gitignore  LICENSE  README.md  bento4.yml  demux2.yml  encode.yml  env.yaml  split2.yml  stack.yml  stitch2.yml
bento4/: handler.py  requirements.txt
demux2/: Cargo.toml
demux2/src/: demux.rs  lib.rs
encode/: handler.py  requirements.txt
split2/: handler.py
stitch2/: handler.py
