[package]
name = "handler"
version = "0.1.0"
authors = ["Gnaphron <gnaphron@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.14"
gst = { package = "gstreamer", version = "0.17.3", features = ["v1_18"]}
anyhow = { package = "anyhow", version = "1.0.43" }
derive_more = { package = "derive_more", version = "0.99.16" }
uuid = {package = "uuid", version = "0.8.2", features = ["v4"] }
log = "0.4.14"
serde_json = "1.0.66"
serde = { version = "1.0", features = ["derive"] }
mime = "0.3.16"
base32 = "0.4"
env_logger = "0.9.0"
